documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.CS

        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgCommWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MsgCommWr(ref UInt16 buf, UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MsgConfig(UInt32 configval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MsgConfigEx(UInt32 configval, UInt16 cwd, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgCWD1Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_MsgCWD1Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgCWD1Wr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_MsgCWD1Wr(UInt16 cwd1, UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgCWD2Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_MsgCWD2Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgCWD2Wr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_MsgCWD2Wr(UInt16 cwd2, UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgDataRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_MsgDataRd(ref UInt16 buf, Int32 count, UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgDataWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_MsgDataWr(ref UInt16 buf, Int32 count, UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgErrorRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_MsgErrorRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgErrorWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_MsgErrorWr(UInt16 value, UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgFieldRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MsgFieldRd(UInt16 fieldtype, UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgFieldWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MsgFieldWr(UInt32 fieldval, UInt16 fieldtype, UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgFlagRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_MsgFlagRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgFlagWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_MsgFlagWr(UInt16 msgflag, UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgIsAccessed@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_MsgIsAccessed(UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_MsgOptRd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_MsgOptWr(UInt16 msgopt, UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_MsgReset(UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgSWD1Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_MsgSWD1Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_MsgSWD2Rd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_MsgSWD2Rd(UInt32 msgaddr, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_Mul@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_Mul(UInt32 mula, UInt32 mulb);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_PortRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_PortRd(UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_PortWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_PortWr(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ProgRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_ProgRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ProgWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_ProgWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMFill@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RAMFill(UInt16 value, UInt32 addrval, UInt32 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMRdB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_RAMRdB(UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_RAMRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RAMRdsW(ref UInt16 valueptr, UInt32 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMRdsxW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RAMRdsxW(ref UInt16 valueptr, UInt32 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_RAMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RAMWipe(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMWipeEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RAMWipeEx(UInt16 value, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RAMWrB(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RAMWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RAMWrsW(ref UInt16 valueptr, UInt32 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMWrsxW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RAMWrsxW(ref UInt16 valueptr, UInt32 addrval, UInt16 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RAMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RAMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_RcvAlloc(UInt16 framenum, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvConfigExx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_RcvConfigExx(UInt32 rtconfigval, UInt16 intfreq, UInt32 monconfigval, UInt32 intconfigval, UInt16 inttotal, UInt32 msgconfigval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvCountRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_RcvCountRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvCountWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RcvCountWr(UInt16 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvDataCountRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_RcvDataCountRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvDataCountWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_RcvDataCountWr(UInt16 countval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RcvIndex@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_RcvIndex(UInt16 framenum, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RTConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_RTConfig(UInt32 configval, Int32 taval, UInt16 intfreq, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RTConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_RTConfigEx(UInt32 configval, Int32 taval, UInt16 intfreq, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RTConfigExx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_RTConfigExx(UInt32 configval, Int32 taval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_RTConfigMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_RTConfigMsg(UInt32 configval, UInt32 msgaddr, UInt32 handleval);
